--- a/css/common.css
+++ b/css/common.css
@@ -277,12 +277,13 @@ header.active{
         left: 100%; right: 0; bottom: 0;
         height: calc(100vh - var(--header-height));
         background-color: var(--white);
-        transition: left 0.3s ease;
+        transition: left 0.2s ease;
     }
     header nav ul{
         flex-direction: column;
         align-items: center;
         padding-top: 70px;
+        opacity: 0;
     }
     header nav ul li{
         width: 100%;
@@ -313,6 +314,9 @@ header.active{
     /* 주메뉴 - active */
     header nav.active{
         left: 0;
+    }
+    header nav.active ul{
+        opacity: 1;
     }
 
     /* 햄버거 메뉴 - active */
@@ -367,6 +371,7 @@ header.active{
 aside{
     position: fixed;
     right: 60px; top: calc(var(--header-height) + 20px); bottom: 20px;
+    z-index: 999;
 
     display: flex;
     flex-direction: column;
